[package]
name = "thunder-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.3.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread"] }
zip-extract = "0.1.3"
